# motion_bridge

./: CMakeLists.txt  package.xml
demo/: demo.cpp  motion_1.cpp  motion_planning_api_tutorial_trajectory_demo.cpp
include/: motion.h  motion.h.autosave
launch/: _dualRobotMotionBringUp.launch  dualRobotMotionBringUp.launch  hsrLeft_bringup.launch  hsrRight_bringup.launch
msg/: joints_angle.msg  robotMotionGroup.msg  robotMotionTraject.msg
src/: main.cpp  motion.cpp  motion_planning_api_tutorial_trajectory_demo.cpp
xiaoxi/srv/: dualRbtraject.srv  motionBridgeStart.srv  moveLine.srv  moveSigleAixs.srv  moveToMultiPose.srv  moveToSiglePose.srv
